# kanalang

./: Cargo.toml  README.md
.github/workflows/: build.yml
chat/: Cargo.toml
chat/src/: main.rs
kanalang/: Cargo.toml
kanalang/src/: dict.rs  lib.rs  main.rs  translator.rs
src/: main.rs  parser.rs  translator.rs
